<resources>
    <string name="app_name">Ekiaart</string>
    <string name="fish_meat"><![CDATA[Fish & Meat]]></string>
    <string name="all">All</string>
    <string name="groceries">Groceries</string>
    <string name="food">Food</string>
    <string name="services">Services</string>
    <string name="edit_location">Edit Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>